--- a/main.tex
+++ b/main.tex
@@ -3,5 +3,34 @@
 \usepackage[a4paper, margin=2cm]{geometry}
 
 \begin{document}
-    Init
+
+% Title Page
+\begin{titlepage}
+    \hrule height 0.1cm
+    \vspace{40pt}
+    \begin{flushright}
+        \Huge\textbf{Software Requirement\\Specification\\}
+        \vspace{30pt}
+        \Large\textbf{for\\}
+        \vspace{25pt}
+        \huge\textbf{Test Case\\Generator\\}
+        \vspace{25pt}
+        \Large\textbf{version: 0.0}
+        \vspace{50pt}
+
+        \vfill
+        \begin{Large}
+            \textbf{Prepared by:\\}
+            Anjali Bansal\\
+            Ankit Gourav\\
+            Dipehs Mangrora\\
+            Sourav Jaiswal\\
+        \end{Large}
+        \vfill
+    \end{flushright}
+
+    % Print date on which doc is generated.
+    \texttt{\today}
+\end{titlepage}
+\pagebreak
 \end{document}
