--- a/main.tex
+++ b/main.tex
@@ -59,4 +59,30 @@
 \end{table}
 \pagebreak
 
+\section{Introduction}
+\subsection{Document Purpose}
+\paragraph{}
+This document is prepared in order to determine the software requirements for the
+\textbf{Test Case Generator} platform. \textbf{Test Case Generator} platform is a
+web-based platform for generating test cases where developers can generate test for
+different alogorithms and functions. The platform allows developers to generate
+scalable test cases suitable for their work. In order to gain an overview about
+the report, firstly, the purpose and scope of this document will be given, and the
+overall description of \textbf{Test Case Generator} platform system is followed. In
+addition to these, system feature such as custom test case generation, large test case
+generation, login service, etc. are described deeply. After mentioning about the
+introduction of the platform, the specific requirements will be addressed for it.
+In the final part, functional and non-functional requirements will be addressed.
+
+\subsection{Document Convention}
+\paragraph{}
+This Document was created based on the IEEE template for System Requirement Specification
+Documents.
+
+\subsection{Intended Users}
+\paragraph{}
+This platform is Intended towards the students who are practicing programming on online
+platforms where they cannot test problems with large test cases before code submission,
+and towards developers who are unable to test the full extent of their applications.
+
 \end{document}
