--- a/main.tex
+++ b/main.tex
@@ -85,4 +85,17 @@ This platform is Intended towards the students who are practicing programming on
 platforms where they cannot test problems with large test cases before code submission,
 and towards developers who are unable to test the full extent of their applications.
 
+\section{External Interface Requirements}
+\subsection{User Interfaces}
+\paragraph{}
+
+\subsection{Hardware Interfaces}
+\paragraph{}
+
+\subsection{Software Interfaces}
+\paragraph{}
+
+\subsection{Communication Interfaces}
+\paragraph{}
+
 \end{document}
