--- a/main.tex
+++ b/main.tex
@@ -24,7 +24,7 @@
             \textbf{Prepared by:\\}
             Anjali Bansal\\
             Ankit Gourav\\
-            Dipehs Mangrora\\
+            Dipesh Mangrora\\
             Sourav Jaiswal\\
         \end{Large}
         \vfill
