--- a/main.tex
+++ b/main.tex
@@ -85,4 +85,9 @@ This platform is Intended towards the students who are practicing programming on
 platforms where they cannot test problems with large test cases before code submission,
 and towards developers who are unable to test the full extent of their applications.
 
+\section{Overall Description}
+\subsection{Product Perspective} 
+\paragraph{}
+Test Generator is developed to allow coders to test their codes for different scenarios. It reduces coder's efforts and saves their time.
+
 \end{document}
