Add Production Functions Subsection

--- a/main.tex
+++ b/main.tex
@@ -90,4 +90,11 @@ and towards developers who are unable to test the full extent of their applicati
 \paragraph{}
 Test Generator is developed to allow coders to test their codes for different scenarios. It reduces coder's efforts and saves their time.
 
+\subsection{Production Functions} 
+\begin{itemize}
+\item The system should allow a user to select a option among various data types.
+\item The system should allow a user to give a range for result.
+\item The system should allow a user to choose result in different forms.
+\end{itemize}
+
 \end{document}
