Updated Document Purpose Subsection

--- a/main.tex
+++ b/main.tex
@@ -64,15 +64,11 @@
 \paragraph{}
 This document is prepared in order to determine the software requirements for the
 \textbf{Test Case Generator} platform. \textbf{Test Case Generator} platform is a
-web-based platform for generating test cases where developers can generate test for
-different alogorithms and functions. The platform allows developers to generate
-scalable test cases suitable for their work. In order to gain an overview about
-the report, firstly, the purpose and scope of this document will be given, and the
-overall description of \textbf{Test Case Generator} platform system is followed. In
-addition to these, system feature such as custom test case generation, large test case
-generation, login service, etc. are described deeply. After mentioning about the
-introduction of the platform, the specific requirements will be addressed for it.
-In the final part, functional and non-functional requirements will be addressed.
+web-based platform for generating test cases where developers can generate test 
+for different algorithms and functions. The platform allows developers to generate
+scalable test cases suitable for their work. This document outlines the scope, 
+objectives, functional and non-functional requirements of the platform, serving as 
+a reference for project developers and testers.
 
 \subsection{Document Convention}
 \paragraph{}
