Add subsection User Interfaces /3.1

--- a/main.tex
+++ b/main.tex
@@ -88,6 +88,10 @@ and towards developers who are unable to test the full extent of their applicati
 \section{External Interface Requirements}
 \subsection{User Interfaces}
 \paragraph{}
+Go to homepage of our website in a browser on your system. From menu list available
+above choose which type of test cases you want to generate.This opens specific test
+case generator for chosen type.Now enter further details and press enter.This will 
+generate test cases for you.
 
 \subsection{Hardware Interfaces}
 \paragraph{}
