Add Hardware interfaces /3.2

--- a/main.tex
+++ b/main.tex
@@ -95,6 +95,10 @@ generate test cases for you.
 
 \subsection{Hardware Interfaces}
 \paragraph{}
+    \begin{itemize}
+        \item Mobile devices
+        \item Laptop,PCs
+    \end{itemize}
 
 \subsection{Software Interfaces}
 \paragraph{}
