Add subsection software interfaces

--- a/main.tex
+++ b/main.tex
@@ -94,14 +94,18 @@ case generator for chosen type.Now enter further details and press enter.This wi
 generate test cases for you.
 
 \subsection{Hardware Interfaces}
-\paragraph{}
-    \begin{itemize}
-        \item Mobile devices
-        \item Laptop,PCs
-    \end{itemize}
+\begin{itemize}
+    \item Mobile devices
+    \item Laptop, PCs
+\end{itemize}
 
 \subsection{Software Interfaces}
-\paragraph{}
+\begin{itemize}
+    \item Android 5.0 and above
+    \item Linux (Ubuntu, Fedora, etc.)
+    \item macOS
+    \item Microsoft Windows (XP and above)
+\end{itemize}
 
 \subsection{Communication Interfaces}
 \paragraph{}
