Add subsection communication interfaces

--- a/main.tex
+++ b/main.tex
@@ -109,5 +109,6 @@ generate test cases for you.
 
 \subsection{Communication Interfaces}
 \paragraph{}
+Requires an internet connection (Ethernet/WIFI).
 
 \end{document}
