Update target/intended users.

--- a/main.tex
+++ b/main.tex
@@ -64,10 +64,10 @@
 \paragraph{}
 This document is prepared in order to determine the software requirements for the
 \textbf{Test Case Generator} platform. \textbf{Test Case Generator} platform is a
-web-based platform for generating test cases where developers can generate test 
+web-based platform for generating test cases where developers can generate test
 for different algorithms and functions. The platform allows developers to generate
-scalable test cases suitable for their work. This document outlines the scope, 
-objectives, functional and non-functional requirements of the platform, serving as 
+scalable test cases suitable for their work. This document outlines the scope,
+objectives, functional and non-functional requirements of the platform, serving as
 a reference for project developers and testers.
 
 \subsection{Document Convention}
@@ -76,17 +76,23 @@ This Document was created based on the IEEE template for System Requirement Spec
 Documents.
 
 \subsection{Intended Users}
-\paragraph{}
-This platform is Intended towards the students who are practicing programming on online
-platforms where they cannot test problems with large test cases before code submission,
-and towards developers who are unable to test the full extent of their applications.
+\begin{itemize}
+    \item Testers
+    \item Developers
+    \item Programmers
+    \item Project Managers
+    \item Technical Writers
+    \item Educators and Students
+    \item Oepn Source Contributors
+    \item Test Automation Engineers
+\end{itemize}
 
 \section{Overall Description}
-\subsection{Product Perspective} 
+\subsection{Product Perspective}
 \paragraph{}
 Test Generator is developed to allow coders to test their codes for different scenarios. It reduces coder's efforts and saves their time.
 
-\subsection{Production Functions} 
+\subsection{Production Functions}
 \begin{itemize}
     \item The system should allow a user to select a option among various data types.
     \item The system should allow a user to give a range for result.
@@ -98,7 +104,7 @@ Test Generator is developed to allow coders to test their codes for different sc
 \paragraph{}
 Go to homepage of our website in a browser on your system. From menu list available
 above choose which type of test cases you want to generate.This opens specific test
-case generator for chosen type.Now enter further details and press enter.This will 
+case generator for chosen type.Now enter further details and press enter.This will
 generate test cases for you.
 
 \subsection{Hardware Interfaces}
