--- a/main.tex
+++ b/main.tex
@@ -190,6 +190,69 @@ Errors should be logged for debugging purposes.
 
 % =================================================================
 
+\section{Non-Functional Requirements:}
+\subsection{Performance:}
+\paragraph{}
+Response times for test case generation and API requests should meet defined performance
+standards. The software should support multiple concurrent users without significant
+performance degradation.
+
+\subsection{Scalability:}
+\paragraph{}
+The system must be able to scale horizontally to accommodate increasing workloads.
+It should be able to handle a growing number of users and generated test cases.
+
+\subsection{Security:}
+\paragraph{}
+Data transmission must be encrypted using SSL/TLS to protect sensitive information.
+User authentication and authorization mechanisms should be robust and secure.
+Regular security audits and vulnerability assessments should be conducted.
+
+\subsection{Data Privacy:}
+\paragraph{}
+The software should comply with relevant data privacy regulations (e.g., GDPR, HIPAA) if applicable.
+Implement data anonymization and encryption where necessary.
+
+\subsection{Accessibility:}
+\paragraph{}
+The user interface must be accessible to users with disabilities and compliant with accessibility standards (e.g., WCAG).
+
+\subsection{Reliability:}
+\paragraph{}
+The software should be highly reliable, with minimal downtime.
+Implement mechanisms for data backup and recovery in case of system failures.
+
+\subsection{Compatibility:}
+\paragraph{}
+Ensure compatibility with a wide range of web browsers (e.g., Chrome, Firefox, Safari, Edge).
+Verify compatibility with different operating systems (e.g., Windows, macOS, Linux).
+
+\subsection{Internationalization (i18n) and Localization (l10n):}
+\paragraph{}
+Support multiple languages and locales in the user interface.
+Format dates, times, and numbers according to the user's locale.
+
+\subsection{Documentation:}
+\paragraph{}
+Provide comprehensive user and developer documentation.
+Keep documentation up to date and easily accessible.
+
+\subsection{User Support:}
+\paragraph{}
+Offer channels for user support and feedback, such as email, chat, or a helpdesk system.
+Ensure timely responses to user inquiries and issues.
+
+\subsection{Regulatory Compliance:}
+\paragraph{}
+Comply with industry-specific regulations and standards, where applicable (e.g., ISO 9001 for quality management).
+
+\subsection{Usability:}
+\paragraph{}
+The user interface should be intuitive and user-friendly.
+Conduct user testing to gather feedback for usability improvements.
+
+% =================================================================
+
 \section{Product Convention}
 \subsection{Project Naming Convention:}
 \paragraph{}
