Add Operating Environment Subsection

--- a/main.tex
+++ b/main.tex
@@ -119,6 +119,21 @@ It reduces coder's efforts and saves their time.
     \item The system should allow a user to choose result in different forms.
 \end{itemize}
 
+\subsection{Operating Environment}
+\paragraph{}
+PC or Laptops:
+\begin{itemize}
+    \item Windows 7
+    \item Windows 8
+    \item Windows 9
+    \item Windows 10
+    \item Windows 11
+    \item Mac OS X
+    \item Linux
+\end{itemize}
+\paragraph{}
+Cellphones, Tablets (Android or IOS), Smart TV's etc.
+
 % =================================================================
 
 \section{External Interface Requirements}
