--- a/main.tex
+++ b/main.tex
@@ -87,7 +87,7 @@ pipelines.
     \item Project Managers
     \item Technical Writers
     \item Educators and Students
-    \item Oepn Source Contributors
+    \item Open Source Contributors
     \item Test Automation Engineers
 \end{itemize}
 
