Operating Environment: Use range instead of explicit Windows versions.

--- a/main.tex
+++ b/main.tex
@@ -123,13 +123,9 @@ It reduces coder's efforts and saves their time.
 \paragraph{}
 PC or Laptops:
 \begin{itemize}
-    \item Windows 7
-    \item Windows 8
-    \item Windows 9
-    \item Windows 10
-    \item Windows 11
-    \item Mac OS X
     \item Linux
+    \item macOS X
+    \item Windows 7-11
 \end{itemize}
 \paragraph{}
 Cellphones, Tablets (Android or IOS), Smart TV's etc.
