Add System Overview section

--- a/main.tex
+++ b/main.tex
@@ -132,6 +132,20 @@ Cellphones, Tablets (Android or IOS), Smart TV's etc.
 
 % =================================================================
 
+\section{System Overview}
+\subsection{System Description}
+\paragraph{}
+Test case generator is an all in one test case generating solution, providing a range
+of features for test case creation, review, and integration. It targets software
+developers, testers, quality assurance professionals, and DevOps engineers.
+
+\subsection{System Architecture}
+Test case generator adopts a client-server architecture. The web-based UI interacts with the
+server to provide an interactive interface, while the CLI and APIs enable automation
+and integration.
+
+% =================================================================
+
 \section{External Interface Requirements}
 \subsection{User Interfaces}
 \paragraph{}
