Update Operating Environment

--- a/main.tex
+++ b/main.tex
@@ -123,9 +123,9 @@ It reduces coder's efforts and saves their time.
 \paragraph{}
 PC or Laptops:
 \begin{itemize}
-    \item Linux
-    \item macOS X
-    \item Windows 7-11
+    \item Linux (Ubuntu, Fedora, etc.)
+    \item macOS
+    \item Microsoft Windows (XP and above)
 \end{itemize}
 \paragraph{}
 Cellphones, Tablets (Android or IOS), Smart TV's etc.
@@ -140,8 +140,8 @@ of features for test case creation, review, and integration. It targets software
 developers, testers, quality assurance professionals, and DevOps engineers.
 
 \subsection{System Architecture}
-Test case generator adopts a client-server architecture. The web-based UI interacts with the
-server to provide an interactive interface, while the CLI and APIs enable automation
+Test case generator adopts a client-server architecture. The web-based UI interacts with
+the server to provide an interactive interface, while the CLI and APIs enable automation
 and integration.
 
 % =================================================================
