Update User Interface subsection

--- a/main.tex
+++ b/main.tex
@@ -148,11 +148,20 @@ and integration.
 
 \section{External Interface Requirements}
 \subsection{User Interfaces}
+\subsubsection{Web-Based User Interface (UI)}
 \paragraph{}
-Go to homepage of our website in a browser on your system. From menu list available
-above choose which type of test cases you want to generate.This opens specific test
-case generator for chosen type.Now enter further details and press enter.This will
-generate test cases for you.
+\textbf{Layout and Navigation}: The UI features an intuitive layout and user-friendly navigation.
+\vspace{-0.4cm}
+\paragraph{}
+\textbf{Interactions}: Users can create, manage, and review test cases with ease.
+\vspace{-0.4cm}
+\paragraph{}
+\textbf{Tooltips}: Informative tooltips assist users in understanding features and functionalities.
+
+\subsection{Command-Line Interface (CLI)}
+\subsubsection{CLI Commands}
+\paragraph{}
+The CLI provides a set of commands mirroring the features of the UI.
 
 \subsection{Hardware Interfaces}
 \begin{itemize}
