Make table of content (index) clickable.

--- a/main.tex
+++ b/main.tex
@@ -1,7 +1,17 @@
 \documentclass{article}
 
+\usepackage{color}
 \usepackage{float}
 \usepackage[a4paper, margin=2cm]{geometry}
+\usepackage{hyperref}
+
+\hypersetup{
+    colorlinks,
+    citecolor=black,
+    filecolor=black,
+    linkcolor=black,
+    urlcolor=black
+}
 
 \begin{document}
 
