Add Documentation section

--- a/main.tex
+++ b/main.tex
@@ -264,7 +264,7 @@ Users can trigger test case generation and events through webhooks and events.
 The CLI provides feature parity with the web-based UI, enabling scripted and
 automated test case generation tasks.
 
-\subsection{Error Handling and Reporting}
+\subsection{Error Handling and Logging}
 \subsubsection{Comprehensive Error Handling}
 \paragraph{}
 The system handles errors gracefully and provides informative error messages to users.
@@ -317,11 +317,6 @@ Verify compatibility with different operating systems (e.g., Windows, macOS, Lin
 Support multiple languages and locales in the user interface.
 Format dates, times, and numbers according to the user's locale.
 
-\subsection{Documentation}
-\paragraph{}
-Provide comprehensive user and developer documentation.
-Keep documentation up to date and easily accessible.
-
 \subsection{User Support}
 \paragraph{}
 Offer channels for user support and feedback, such as email, chat, or a helpdesk system.
@@ -335,6 +330,24 @@ Comply with industry-specific regulations and standards, where applicable (e.g.,
 \paragraph{}
 The user interface should be intuitive and user-friendly.
 Conduct user testing to gather feedback for usability improvements.
+
+% =================================================================
+
+\section{Documentation}
+\subsection{User Documentation}
+\subsubsection{User Guides}
+\paragraph{}
+Comprehensive user documentation provides guidance on software usage.
+
+\subsubsection{Updates}
+\paragraph{}
+User documentation is regularly updated to reflect software changes.
+
+\subsection{Developer Documentation}
+\subsubsection{API Documentation}
+\paragraph{}
+Developer documentation provides detailed information about API endpoints,
+request/response formats, and usage examples.
 
 % =================================================================
 
